Fix spacing in latest updates

--- a/public/output.css
+++ b/public/output.css
@@ -3725,6 +3725,18 @@ html {
   height: 15rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-4\/5 {
+  height: 80%;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -3735,6 +3747,34 @@ html {
 
 .w-60 {
   width: 15rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .shrink {
@@ -3805,6 +3845,10 @@ html {
   place-self: start;
 }
 
+.place-self-center {
+  place-self: center;
+}
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -3869,6 +3913,11 @@ html {
   fill: currentColor;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -3913,6 +3962,11 @@ html {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
